--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -19,7 +19,7 @@ data:
     password:
     read_timeout: 0.2s
     write_timeout: 0.2s
-    prefix: "kratos-base-layout"
+    prefix: "kbk-layout"
 trace:
   endpoint: http://127.0.0.1:14268/api/traces
 etcd:
