--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -19,8 +19,4 @@ data:
     password:
     read_timeout: 0.2s
     write_timeout: 0.2s
-    prefix: "kbk-layout"
-trace:
-  endpoint: http://127.0.0.1:14268/api/traces
-etcd:
-  address: 127.0.0.1:2379
+    prefix: "example_"
